k8s/11-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: skinscan
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
